<resources>
    <string name="app_name">어디로든</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="WhereIsNext">다음 여행, 이곳은 어때요?</string>
    <string name="howisthisitem">예약 상품 추천</string>
    <string name="emailsingIn">이메일로 회원가입</string>
    <string name="GoMoreTrip"><u>더 많은 여행지 보기>></u></string>
    <string name="GoAreaList">지역별 여행지 보기</string>
    <string name="GowhetherIsGood">날씨 좋은 여행지 보기</string>
    <string name="whetherIsGood">날씨/미세먼지 좋은 여행지</string>
    <string name="AreaTrip">관광지</string>
    <string name="emailsignIn">이메일로 로그인 하기</string>
    <string name="search">검색</string>
    <string name="Gomap">지도로 보기</string>
    <string name="beach_list">해수욕장</string>
    <string name="gotothebigmap">지도로 보기 이동 >></string>
    <string name="community">커뮤니티</string>
    <string name="updatemarker">이 지역에서 다시 검색하기</string>

    <string name="tabpost">Posts</string>
    <string name="tabReview">Review</string>
    <string name="tabUser">My Posts</string>
    <string name="writing">게시판</string>
    <string name="POST">완료</string>

    <string name="POST_name">제목</string>
    <string name="POST_body">내용을 입력 하세요.</string>

    <string name="festival">축제/행사</string>
    <string name="duringMonthFest">전국 축제/행사 Top30🎈</string>

    <string name="view_more"><u><i>더보기</i></u></string>
    <string name="view_close"><u><i>닫기</i></u></string>
    <string name="title_activity_festival">FestivalActivity</string>
    <string name="view_more_fest">더 많은 축제/행사 보러가기>></string>
    <string name="view_more_this_month_fest">월별 축제/행사 더보기>></string>

    <string name="Booking">상품 예약</string>
    <string name="bookingBtn">예약 하기</string>
    <string name="Food">음식점</string>

    <string name="myPost">내 글 보기</string>
    <string name="myBooking">내 예약 보기</string>
    <string name="User">내 정보</string>

    <string name="myCode">예약 번호</string>
    <string name="myComTime">예약 완료 시간</string>
    <string name="myItemNm">예약 상품</string>
    <string name="myNm">예약자 이름</string>
    <string name="myDate">예약 날짜</string>
    <string name="myTime">예약 시간</string>
    <string name="myNum">예약 인원</string>
    <string name="myPrice">결제 금액</string>

    <string name="searchResIsNon">검색 결과가 없습니다.</string>

    <string name="accommodations">숙박</string>
    <string name="searchCount">검색결과()</string>

<!--        <string name="contentType12">-->
<!--            &#160;세계문화유산유무 : %1$s\n-->
<!--            세계자연유산유무 : %2$s\n-->
<!--            세계기록유산유무 : %3$s\n-->
<!--            문의 및 안내 : %4$s\n-->
<!--            개장일 : %5$s\n-->
<!--            쉬는날 : %6$s\n-->
<!--            체험안내 : %7$s\n-->
<!--            체험 가능 연령 : %8$s\n-->
<!--            수용 인원 : %9$s\n-->
<!--            이용 시기 : %10$s\n-->
<!--            이용 시간 : %11$s\n-->
<!--            주차시설 : %12$s\n-->
<!--            유모차 대여정보 : %13$s\n-->
<!--            애완동물 동반가능정보 : %14$s\n-->
<!--            신용카드 가능정보 : %15$s\n-->
<!--        </string>-->

    <!--    <string name="contentType15">-->
    <!--        &#160;행사시작일 : %1$s\n-->
    <!--        행사종료일 : %2$s\n-->
    <!--        관람가능연령 : %3$s\n-->
    <!--        축제등급 : %4$s\n-->
    <!--        공연시간 : %5$s\n-->
    <!--        행사프로그램 : %6$s\n-->
    <!--        관람소요시간 : %7$s\n-->
    <!--        행사장위치안내 : %8$s\n-->
    <!--        행사장소 : %9$s\n-->
    <!--        예매처 : %10$s\n-->
    <!--        할인정보 : %11$s\n-->
    <!--        행사홈페이지 : %12$s\n-->
    <!--        부대행사내용 : %13$s\n-->
    <!--        이용요금 : %14$s\n-->
    <!--        \n-->
    <!--        주최자정보1 : %15$s\n-->
    <!--        주최자연락처1 : %16$s\n-->
    <!--        주관사정보2 : %17$s\n-->
    <!--        주관사연락처2 : %18$s\n-->

    <!--    </string>-->

    <!--    <string name="contentType39">-->
    <!--       &#160;좌석 수 : %1$s\n-->
    <!--        어린이놀이방여부 : %2$s\n-->
    <!--        대표메뉴 : %3$s\n-->
    <!--        금연/흡연여부 : %4$s\n-->
    <!--        포장가능 : %5$s\n-->
    <!--        문의 및 안내 : %6$s\n-->
    <!--        규모 : %7$s\n-->
    <!--        주차시설 : %8$s\n-->
    <!--        개업일 : %9$s\n-->
    <!--        영업시간 : %10$s\n-->
    <!--        쉬는 날 : %11$s\n-->
    <!--        할인정보 : %12$s\n-->
    <!--        신용카드정보 : %13$s\n-->
    <!--        예약안내 : %14$s\n-->
    <!--        인허가번호 : %15$s\n-->
    <!--    </string>-->

    <!--    <string name="contentType28">-->
    <!--        &#160;개장시간 : %1$s\n-->
    <!--        예약안내 : %2$s\n-->
    <!--        문의 및 안내 : %3$s\n-->
    <!--        규모 : %4$s\n-->
    <!--        수용인원 : %5$s\n-->
    <!--        쉬는날 : %6$s\n-->
    <!--        이용시간 : %7$s\n-->
    <!--        입장료 : %8$s\n-->
    <!--        체험가능연령 : %9$s\n-->
    <!--        주차시설 : %10$s\n-->
    <!--        주차요금 : %11$s\n-->
    <!--        유모차 대여정보 : %12$s\n-->
    <!--        애완동물동반 가능정보 : %13$s\n-->
    <!--        신용카드 가능정보 : %14$s\n-->
    <!--    </string>-->


</resources>