<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/TopMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnback"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/areaName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/app_name" />

    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/TopMenu"
        android:layout_marginBottom="20dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detailNm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="title"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/detailaddr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detailNm"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="address"
                android:textSize="15dp" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/detailaddr"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <RelativeLayout
                android:id="@+id/re_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider1">

                <TextView
                    android:id="@+id/weatherTv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:text="지금날씨는?" />

                <!--                <ImageView-->
                <!--                    android:id="@+id/weatherImg"-->
                <!--                    android:layout_width="40dp"-->
                <!--                    android:layout_height="40dp"-->
                <!--                    android:layout_alignParentRight="true"-->
                <!--                    android:layout_marginRight="20dp"-->
                <!--                    android:visibility="gone"/>-->


            </RelativeLayout>


            <FrameLayout
                android:id="@+id/ImgFrame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/re_weather">

                <ImageView
                    android:id="@+id/detailImg"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/brankimg" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom|right"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/ic_baseline_fullscreen_24"
                    android:backgroundTint="@color/black"
                    android:onClick="fullImg" />

            </FrameLayout>


            <TextView
                android:id="@+id/detailOv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ImgFrame"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:text="overview"
                android:textSize="17dp" />


            <TextView
                android:id="@+id/view_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detailOv"
                android:layout_alignParentRight="true"
                android:layout_marginHorizontal="15dp"
                android:text="@string/view_more"
                android:textColor="#0073FF"
                android:textSize="15dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/view_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detailOv"
                android:layout_alignParentRight="true"
                android:layout_marginHorizontal="15dp"
                android:text="@string/view_close"
                android:textColor="#0073FF"
                android:textSize="15dp"
                android:visibility="gone" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/view_more"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:background="?android:attr/listDivider" />

            <!--            <LinearLayout-->
            <!--                android:id="@+id/moreDetailLay"-->
            <!--                android:layout_below="@+id/divider2"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content">-->

            <!--                <RelativeLayout-->
            <!--                    android:layout_weight="0.5"-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="wrap_content">-->
            <!--                    <TextView-->
            <!--                        android:id="@+id/MoredetailTv1"-->
            <!--                        android:layout_width="match_parent"-->
            <!--                        android:layout_height="wrap_content"-->
            <!--                        android:layout_marginHorizontal="15dp"-->
            <!--                        android:layout_marginTop="5dp"-->
            <!--                        android:text="..."-->
            <!--                        android:textSize="13dp" />-->

            <!--                </RelativeLayout>-->

            <!--                <RelativeLayout-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="wrap_content">-->
            <!--                    <TextView-->
            <!--                        android:id="@+id/MoredetailTv2"-->
            <!--                        android:layout_width="match_parent"-->
            <!--                        android:layout_height="wrap_content"-->

            <!--                        android:layout_marginHorizontal="15dp"-->
            <!--                        android:layout_marginTop="5dp"-->
            <!--                        android:text="..."-->
            <!--                        android:textSize="13dp" />-->

            <!--                </RelativeLayout>-->


            <!--            </LinearLayout>-->

            <TextView
                android:id="@+id/MoredetailTv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider2"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="..."
                android:textSize="13dp" />

            <Button
                android:id="@+id/fullscreenBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/MoredetailTv1"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:background="#0D474747"
                android:shadowColor="#000000"
                android:shadowDx="7.0"
                android:shadowDy="7.0"
                android:shadowRadius="7.0"
                android:text="@string/gotothebigmap"
                android:textColor="@color/black"

                />

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/fullImg_Lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B34A4A4A"
        android:visibility="invisible">

        <Button
            android:id="@+id/closeBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/x_circle_icon"
            android:onClick="fullImgClose" />

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/fullImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:visibility="invisible"
            tools:ignore="MissingClass" />

    </RelativeLayout>

</RelativeLayout>

    <!--
     map:cameraBearing="0"      타겟과 북쪽 사이의 각
     map:cameraTargetLat="37.56"    위도
     map:cameraTargetLng="126.97"   경도
     map:cameraTilt="30"            카메라 각
     map:cameraZoom="13"            카메라 줌
     map:mapType="normal"           normal/hybrid/terrain
     map:uiCompass="true"           지도위에 나침반
     map:uiRotateGestures="true"    화면 돌리기
     map:uiScrollGestures="false"   화면 이동
     map:uiTiltGestures="true"      각 변경
     map:uiZoomControls="true"      줌 버튼
     map:uiZoomGestures="true"      줌

    -->